# IPVS-GPXPy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clang-format 3.patch  compile_gprat.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  lint.yml
bindings/: CMakeLists.txt  gprat_py.cpp  module.cpp  utils_py.cpp
cmake/: install-config.cmake
core/: CMakeLists.txt
core/include/: adapter_cblas_fp32.hpp  adapter_cblas_fp64.hpp  gp_algorithms_cpu.hpp  gp_functions.hpp  gp_hyperparameters.hpp  gp_kernels.hpp  gp_optimizer.hpp  gp_uncertainty.hpp  gprat_c.hpp  tiled_algorithms_cpu.hpp  utils_c.hpp
core/include/cpu/: adapter_cblas_fp32.hpp  adapter_cblas_fp64.hpp  gp_algorithms.hpp  gp_functions.hpp  gp_uncertainty.hpp  tiled_algorithms.hpp
core/include/gprat/: gp_hyperparameters.hpp  gp_kernels.hpp  gprat.hpp  gprat_c.hpp  hyperparameters.hpp  kernels.hpp  performance_counters.hpp  scheduler.hpp  target.hpp  tile_data.hpp  utils.hpp  utils_c.hpp
core/include/gprat/components/: tiled_dataset.hpp
core/include/gprat/cpu/: adapter_cblas_fp32.hpp  adapter_cblas_fp64.hpp  gp_algorithms.hpp  gp_functions.hpp  gp_optimizer.hpp  gp_uncertainty.hpp  tiled_algorithms.hpp
core/include/gprat/detail/: actions.hpp  async_helpers.hpp  config.hpp
core/include/gprat/gpu/: adapter_cublas.cuh  cuda_kernels.cuh  cuda_utils.cuh  gp_algorithms.cuh  gp_functions.cuh  gp_optimizer.cuh  gp_uncertainty.cuh  tiled_algorithms.cuh
core/include/gpu/: adapter_cublas.cuh  cuda_kernels.cuh  cuda_utils.cuh  gp_algorithms.cuh  gp_optimizer.cuh  gp_uncertainty.cuh  tiled_algorithms.cuh
core/src/: adapter_cblas_fp32.cpp  adapter_cblas_fp64.cpp  adapter_mkl.cpp  gp_algorithms_cblas.cpp  gp_functions.cpp  gp_hyperparameters.cpp  gp_kernels.cpp  gp_optimizer.cpp  gp_uncertainty.cpp  gprat.cpp  gprat_c.cpp  hyperparameters.cpp  kernels.cpp  performance_counters.cpp  target.cpp  tile_data.cpp  tiled_algorithms_cpu.cpp  utils.cpp  utils_c.cpp
core/src/cpu/: adapter_cblas_fp32.cpp  adapter_cblas_fp64.cpp  gp_algorithms.cpp  gp_functions.cpp  gp_optimizer.cpp  gp_uncertainty.cpp  tiled_algorithms.cpp
core/src/gpu/: adapter_cublas.cu  cuda_kernels.cu  gp_algorithms.cu  gp_functions.cu  gp_optimizer.cu  gp_uncertainty.cu  tiled_algorithms.cu
data/data_1024/: output.json  test_input.txt  test_output.txt  training_input.txt  training_output.txt
data/generators/msd_simulator/: README.md
examples/distributed/: CMakeLists.txt
examples/distributed/src/: distributed_blas.cpp  distributed_blas.hpp  distributed_cholesky.hpp  distributed_tile.cpp  distributed_tile.hpp  main.cpp  scheduling.cpp  scheduling.hpp
examples/gpflow_reference/: config.json  execute.py  gpflow_mkl.patch  requirements.txt  requirements_gpu.txt  run_gpflow.sh
examples/gprat_cpp/: CMakeLists.txt  run_gprat_cpp.sh
examples/gprat_cpp/src/: execute.cpp
examples/gprat_python/: config.json  execute.py  run_gprat_python.sh
examples/gpytorch_reference/: execute.py  run_gpytorch.sh  utils.py
external_ports/: README.md
external_ports/intel-mkl/: portfile.cmake
spack-repo/: repo.yaml  setup_spack.sh
spack-repo/environments/: ci_env_settings.yaml.tpl  setup_gprat_cpu_gcc.sh  setup_gprat_gpu_clang.sh  spack_cpu_gcc.yaml  spack_cpu_gcc_arm.yaml  spack_gpu_clang.yaml
test/: CMakeLists.txt
test/src/: output_correctness.cpp  prediction_regression.cpp  test_data.hpp
